tdf#119850 show missing mysql connector options

For MYSQL connections there is an extra window which determines how to
connect to a mysql/mariadb database. This functionality is handled in
OGeneralPageWizard::approveDatasourceType.

Change-Id: Ia3c548103b694731cba47ff5390c34b072a938a0
Reviewed-on: https://gerrit.libreoffice.org/60893
Reviewed-by: Tamás Bunth <btomi96@gmail.com>
Tested-by: Tamás Bunth <btomi96@gmail.com>